@@ -4,7 +4,7 @@ Upstream-Name: debsig-verify
 Files: *
 Copyright:
  Copyright © 2001 Ben Collins <bcollins@debian.org>
- Copyright © 2009, 2014-2017 Guillem Jover <guillem@debian.org>
+ Copyright © 2009, 2014-2019 Guillem Jover <guillem@debian.org>
 License: GPL-2+
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
